--- a/src/DocumentsBundle/Resources/views/Default/index.html.twig
+++ b/src/DocumentsBundle/Resources/views/Default/index.html.twig
@@ -1,1 +1,15 @@
-Page accueil document
+<table class="table">
+    <thead>
+        <tr>
+            <th>Rubrique</th>
+            <th>Document</th>
+            <th>Présentation</th>
+            <th>État</th>
+            <th>Version</th>
+            <th>Commentaire</th>
+        </tr>
+    </thead>
+    <tbdoy>
+        <tr></tr>
+    </tbdoy>
+</table>
