--- a/src/DocumentsBundle/Resources/views/Default/index.html.twig
+++ b/src/DocumentsBundle/Resources/views/Default/index.html.twig
@@ -1,15 +1,24 @@
-<table class="table">
-    <thead>
-        <tr>
-            <th>Rubrique</th>
-            <th>Document</th>
-            <th>Présentation</th>
-            <th>État</th>
-            <th>Version</th>
-            <th>Commentaire</th>
-        </tr>
-    </thead>
-    <tbdoy>
-        <tr></tr>
-    </tbdoy>
-</table>
+<div class="row">
+    <div class="col-md-12">
+        <a href="#">Aide</a>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <table class="table">
+            <thead>
+            <tr>
+                <th>Rubrique</th>
+                <th>Document</th>
+                <th>Présentation</th>
+                <th>État</th>
+                <th>Version</th>
+                <th>Commentaire</th>
+            </tr>
+            </thead>
+            <tbdoy>
+                <tr></tr>
+            </tbdoy>
+        </table>
+    </div>
+</div>
