--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -2,10 +2,13 @@
 
 {% block body %}
     <div id="wrapper">
+        {% include '@FullCalendar/Calendar/calendar.html.twig' %}
         <div id="container">
             <div id="welcome">
                 <h1><span>Welcome to</span> Symfony {{ constant('Symfony\\Component\\HttpKernel\\Kernel::VERSION') }}</h1>
             </div>
+
+
 
             <div id="status">
                 <p>
@@ -47,6 +50,7 @@
 {% endblock %}
 
 {% block stylesheets %}
+    <link rel="stylesheet" href="{{ asset('bundles/fullcalendar/css/fullcalendar/fullcalendar.min.css') }}" />
 <style>
     body { background: #F5F5F5; font: 18px/1.5 sans-serif; }
     h1, h2 { line-height: 1.2; margin: 0 0 .5em; }
@@ -73,4 +77,57 @@
         .sf-toolbar { opacity: 0; -webkit-animation: fade-in 1s .2s forwards; animation: fade-in 1s .2s forwards;}
     }
 </style>
+{% endblock %}
+
+{% block javascripts %}
+    <script type="text/javascript" src="{{ asset('bundles/fullcalendar/js/fullcalendar/lib/jquery.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/fullcalendar/js/fullcalendar/lib/moment.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/fullcalendar/js/fullcalendar/fullcalendar.min.js') }}"></script>
+    <script type="text/javascript" src="{{ asset('bundles/fullcalendar/js/fullcalendar/fullcalendar.default-settings.js') }}"></script>
+
+    <script>
+        /*$(function () {
+            $('#calendar-holder').fullCalendar({
+                header: {
+                    left: 'prev, next',
+                    center: 'title',
+                    right: 'month, agendaWeek, agendaDay'
+                },
+                timezone: ('Europe/Paris'),
+                businessHours: {
+                    start: '09:00',
+                    end: '17:30',
+                    dow: [1, 2, 3, 4, 5]
+                },
+                allDaySlot: false,
+                defaultView: 'agendaWeek',
+                lazyFetching: true,
+                firstDay: 1,
+                selectable: true,
+                timeFormat: {
+                    agenda: 'h:mmt',
+                    '': 'h:mmt'
+                },
+                columnFormat: {
+                    month: 'ddd',
+                    week: 'ddd D/M',
+                    day: 'dddd'
+                },
+                editable: true,
+                eventDurationEditable: true,
+                eventSources: [
+                    {
+                        url: /full-calendar/load,
+                        type: 'POST',
+                        data: {
+                            filters: {param: foo}
+                        },
+                        error: function () {
+                            //alert()
+                        }
+                    }
+                ]
+            }
+        }*/
+    </script>
 {% endblock %}
