--- a/src/DocumentsBundle/Resources/views/Default/index.html.twig
+++ b/src/DocumentsBundle/Resources/views/Default/index.html.twig
@@ -1,31 +1,9 @@
-<div class="row">
-    <div class="col-md-12">
-        <a href="#">Aide</a>
+{{ include('header.html.twig') }}
+{% block content %}
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-6">p</div>
+            <div class="col-md-6">p</div>
+        </div>
     </div>
-</div>
-<div class="row">
-    <div class="col-md-12">
-        <table class="table">
-            <thead>
-            <tr>
-                <th>Rubrique</th>
-                <th>Document</th>
-                <th>Présentation</th>
-                <th>État</th>
-                <th>Version</th>
-                <th>Commentaire</th>
-            </tr>
-            </thead>
-            <tbdoy>
-                <tr>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                    <td></td>
-                </tr>
-            </tbdoy>
-        </table>
-    </div>
-</div>
+{% endblock %}
