--- a/web/assets/bootstrap/docs/assets/css/src/docs.css
+++ b/web/assets/bootstrap/docs/assets/css/src/docs.css
@@ -535,7 +535,7 @@ h4 code {
  * sections of docs content.
  */
 
-/* By default it's not affixed in mobile views, so undo that */
+/* By default it's not affixed in mobile templates, so undo that */
 .bs-docs-sidebar.affix {
   position: static;
 }
