--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -5,5 +5,16 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand navbar-light bg-light">
+    <ul class="navbar-nav mt-2 mt-lg-0">
+        <li class="nav-item"><a class="nav-link" href="">Accueil</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Bibliothèque</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Agenda</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Messagerie</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Notifications</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Mes Informations</a></li>
+    </ul>
+</nav>
+
 {% block content %}
 {% endblock %}
