--- a/src/DocumentsBundle/Resources/views/Default/index.html.twig
+++ b/src/DocumentsBundle/Resources/views/Default/index.html.twig
@@ -2,8 +2,16 @@
 {% block content %}
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-6">p</div>
-            <div class="col-md-6">p</div>
+            <div class="col-md-12">
+                <a href="#">Aide</a>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <table class="table">
+                    
+                </table>
+            </div>
         </div>
     </div>
 {% endblock %}
