--- a/src/DocumentsBundle/Resources/views/Default/index.html.twig
+++ b/src/DocumentsBundle/Resources/views/Default/index.html.twig
@@ -9,7 +9,26 @@
         <div class="row">
             <div class="col-md-12">
                 <table class="table">
-                    
+                    <thead>
+                        <tr>
+                            <th>Rubrique</th>
+                            <th>Document</th>
+                            <th>Présentation</th>
+                            <th>État</th>
+                            <th>Version</th>
+                            <th>Commentaire</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                        </tr>
+                    </tbody>
                 </table>
             </div>
         </div>
