--- a/src/DocumentsBundle/Resources/views/Default/index.html.twig
+++ b/src/DocumentsBundle/Resources/views/Default/index.html.twig
@@ -1,4 +1,9 @@
 {{ include('header.html.twig') }}
+
+{% block stylesheets %}
+    <link rel="stylesheet" type="text/css" href="{{ asset('css/docs.css') }}"
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid">
         <div class="row">
@@ -21,12 +26,20 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
-                            <td></td>
+                            <td>p</td>
+                            <td>p</td>
+                            <td>p</td>
+                            <td>p</td>
+                            <td>p</td>
+                            <td>p</td>
+                        </tr>
+                        <tr>
+                            <td>P</td>
+                            <td>P</td>
+                            <td>P</td>
+                            <td>p</td>
+                            <td>p</td>
+                            <td>p</td>
                         </tr>
                     </tbody>
                 </table>
