--- a/app/Resources/views/header.html.twig
+++ b/app/Resources/views/header.html.twig
@@ -2,8 +2,10 @@
 <html>
 <head>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    {% block stylesheets %}
+    {% endblock %}
 </head>
-<body>
+<body id="vueApp">
 
 <nav class="navbar navbar-expand navbar-light bg-light">
     <ul class="navbar-nav mt-2 mt-lg-0">
