--- a/src/DocumentsBundle/Resources/views/Default/index.html.twig
+++ b/src/DocumentsBundle/Resources/views/Default/index.html.twig
@@ -1,19 +1,19 @@
-{{ include('header.html.twig') }}
-
 {% block stylesheets %}
     <link rel="stylesheet" type="text/css" href="{{ asset('css/docs.css') }}"
 {% endblock %}
 
+{{ include('header.html.twig') }}
+
 {% block content %}
-    <div class="container-fluid">
-        <div class="row">
+    <div class="container docs-container">
+        <div class="row docs-help">
             <div class="col-md-12">
                 <a href="#">Aide</a>
             </div>
         </div>
-        <div class="row">
+        <div class="row docs-table">
             <div class="col-md-12">
-                <table class="table">
+                <table class="table table-bordered">
                     <thead>
                         <tr>
                             <th>Rubrique</th>
